--- a/authenticate/templates/authenticate/base.html
+++ b/authenticate/templates/authenticate/base.html
@@ -22,16 +22,41 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
 
-          <li class="nav-item">
-            <a class="nav-link"  href="#">Login</a>
-          </li>
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link"  href="">Logout</a>
+                </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link"  href="{% url 'login' %}">Login</a>
+              </li>
+
+            {% endif %}
         </ul>
       </div>
     </nav>
 
     <br/>
-
     <div class="container">
+        {% if messages %}
+            {% for message in messages %}
+{#                <div class="alert alert-warning alert-dismissible" role="alert">#}
+{#                    <button type="button" class="close" data-dismiss="alert">#}
+{#                        <small><sup>x</sup></small>#}
+{#                        Close#}
+{#                    </button>#}
+{#                    {{ message }}#}
+{#                </div>#}
+
+                <div class="alert alert-warning alert-dismissible" role="alert">
+                  {{ message }}
+                  <button type="button" class="close" data-bs-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+            {% endfor %}
+        {% endif %}
+
         {% block content %}
         {% endblock %}
     </div>
