--- a/authenticate/templates/authenticate/home.html
+++ b/authenticate/templates/authenticate/home.html
@@ -4,4 +4,11 @@
 
 <h1>Syntro Home Page</h1>
 
+    {% if user.is_authenticated %}
+        <p> Name: {{ user.name }} </p>
+        <p> Username: {{ user.username }} </p>
+        <p> Password: {{ user.password }} </p>
+        <p> Email: {{ user.email }} </p>
+    {% endif %}
+
 {% endblock %}
