Add skeleton for registration page.

--- a/authenticate/templates/authenticate/base.html
+++ b/authenticate/templates/authenticate/base.html
@@ -31,6 +31,11 @@
                 <a class="nav-link"  href="{% url 'login' %}">Login</a>
               </li>
 
+              {# Registration support.#}
+              <li class="nav-item">
+                <a class="nav-link"  href="{% url 'register' %}">Register</a>
+              </li>
+
             {% endif %}
         </ul>
       </div>
