Add basic registration form and functionality.

--- a/authenticate/templates/authenticate/register.html
+++ b/authenticate/templates/authenticate/register.html
@@ -4,5 +4,14 @@
 
 <h1>Register</h1>
 
+        <form method="POST" action="{% url 'register' %}">
+               {% csrf_token %}
+
+        {% if form.errors %}
+            <p>Your form has errors.</p>
+        {% endif %}
+        {{ form.as_p }}
+        <input type="submit" value="Register" class="btn btn-secondary">
+    </form>
 
 {% endblock %}
