--- a/search/templates/search/home.html
+++ b/search/templates/search/home.html
@@ -9,11 +9,10 @@
     <br/>
     <form action="{% url 'search' %}" class="form-inline" method="get">
        <div class="form-group mb-8">
-            <h1>{% if type %}{{ type.name }}{% else %} List of Books {% endif %}</h1>
+            <h2>{% if type %}{{ type.name }}{% else %} Ask Syntro.ai below {% endif %}</h2>
        </div>
        <div class="form-group mx-sm-3 mb-2">
-        <label for="" class="sr-only">search</label>
-        <input name="search" type="" class="form-control" id="" placeholder="Keyword">
+        <input name="search" type="" class="form-control" id="" placeholder="Your question here.">
         </div>
         <button type="submit" class="btn btn-success btn-lg mb-2">Search</button>
    </form>
